Javadoc -- stricter rules for comments; valueOf instead of new Double